--- a/Hobdy-part-one/index.html
+++ b/Hobdy-part-one/index.html
@@ -3,8 +3,21 @@
 <head>
     <meta name="viewport" content="width=device-width, intial-scale 1.0">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+
 </head>    
     <body>
-        
+        <header>
+            Adopt Me 
+        </header>
+        <nav class="nav">
+            <ul>
+                <li>About Us</li>
+                <li>What We Do</li>
+                <li>Benefits</li>
+                <li>Our Buddies</li>
+                <li id="Contact">Contact Us</li>
+            </ul>
+        </nav>
     </body>
 </html>
