images uploaded background image updated

--- a/Hobdy-part-one/index.html
+++ b/Hobdy-part-one/index.html
@@ -2,12 +2,15 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, intial-scale 1.0">
+    <title>Adpot Me</title>
+    <link rel="shortcut icon" href="images/bulldog.jpg">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
 </head>    
     <body>
-        <header>
+        <div>
+        <header class="header">
             Adopt Me 
         </header>
         <nav class="nav">
@@ -19,5 +22,6 @@
                 <li id="Contact">Contact Us</li>
             </ul>
         </nav>
+        </div>
     </body>
 </html>
