--- a/Hobdy-part-one/index.html
+++ b/Hobdy-part-one/index.html
@@ -15,11 +15,11 @@
         </header>
         <nav class="nav">
             <ul>
-                <li>About Us</li>
-                <li>What We Do</li>
-                <li>Benefits</li>
-                <li>Our Buddies</li>
-                <li id="Contact">Contact Us</li>
+                <li><a href="">About Us</a></li>
+                <li><a href="">What We DO</a></li>
+                <li><a href="">Benefits</a></li>
+                <li><a href="">Our Buddies</a></li>
+                <li id="Contact"><a href="">Contact Us</a></li>
             </ul>
         </nav>
         </div>
