--- a/Hobdy-part-one/index.html
+++ b/Hobdy-part-one/index.html
@@ -19,7 +19,7 @@
                 <li><a href="">What We DO</a></li>
                 <li><a href="">Benefits</a></li>
                 <li><a href="">Our Buddies</a></li>
-                <li id="Contact"><a href="">Contact Us</a></li>
+                <li id="Contact"><button class="button">Contact Us</button></li>
             </ul>
         </nav>
         </div>
