typo fixed in title and button hover color

--- a/Hobdy-part-one/index.html
+++ b/Hobdy-part-one/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, intial-scale 1.0">
-    <title>Adpot Me</title>
+    <title>Adopt Me</title>
     <link rel="shortcut icon" href="images/bulldog.jpg">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
