--- a/Hobdy-part-one/index.html
+++ b/Hobdy-part-one/index.html
@@ -11,7 +11,7 @@
     <body>
         <div>
         <header class="header">
-            Adopt Me 
+            Adpot <span class="emphasis">Me</span> 
         </header>
         <nav class="nav">
             <ul>
