--- a/Hobdy-part-one/index.html
+++ b/Hobdy-part-one/index.html
@@ -22,6 +22,13 @@
                 <li id="Contact"><button class="button">Contact Us</button></li>
             </ul>
         </nav>
+        <h1>
+            Do you think about <span class="emphasis">adopting</span> a friend?
+        </h1>
+        <h2>
+            We will help you choose the best buddy that fits your family and home perfectly.
+        </h2>
+        <button class="button">Find out how</button>
         </div>
     </body>
 </html>
