--- a/Hobdy-part-one/index.html
+++ b/Hobdy-part-one/index.html
@@ -10,25 +10,27 @@
 </head>    
     <body>
         <div>
-        <header class="header">
+            <header class="header">
             Adopt <span class="emphasis">Me</span> 
-        <nav class="nav">
-            <ul id="ul">
-                <li><a href="">About Us</a></li>
-                <li><a href="">What We DO</a></li>
-                <li><a href="">Benefits</a></li>
-                <li><a href="">Our Buddies</a></li>
-                <li id="Contact"><button class="button">Contact Us</button></li>
-            </ul>
-        </nav>
-    </header>
-        <h1>
-            Do you think about <span class="emphasis">adopting</span> a friend?
-        </h1>
-        <h2>
-            We will help you choose the best buddy that fits your family and home perfectly.
-        </h2>
-        <button class="button">Find out how</button>
+                <nav class="nav">
+                    <ul id="ul">
+                        <li><a href="">About Us</a></li>
+                        <li><a href="">What We DO</a></li>
+                        <li><a href="">Benefits</a></li>
+                        <li><a href="">Our Buddies</a></li>
+                        <li id="Contact"><button class="button">Contact Us</button></li>
+                    </ul>
+                </nav>
+            </header>
+            <div id="paragraph">   
+                <h13>
+                Do you think about <span class="emphasis">adopting</span> a friend?
+                </h1>
+                <h2>
+                We will help you choose the best buddy that fits your family and home perfectly.
+                </h2>
+                <button class="button">Find out how</button>
+            </div> 
         </div>
     </body>
 </html>
