--- a/Hobdy-part-one/index.html
+++ b/Hobdy-part-one/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width, intial-scale 1.0">
+    <meta name="viewport" content="width=device-width, initial-scale 1.0">
     <title>Adopt Me</title>
     <link rel="shortcut icon" href="images/bulldog.jpg">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans&display=swap" rel="stylesheet">
