paragraph id deleted

--- a/Hobdy-part-one/index.html
+++ b/Hobdy-part-one/index.html
@@ -22,7 +22,7 @@
                     </ul>
                 </nav>
             </header>
-            <div id="paragraph">   
+            <div>   
                 <h1>
                 Do you think about <span class="emphasis">adopting</span> a friend?
                 </h1>
