background change to path dot before forward slash

--- a/Hobdy-part-one/index.html
+++ b/Hobdy-part-one/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adopt Me</title>
-    <link rel="shortcut icon" href="/Hobdy-part-one/Images/bulldog.jpg">
+    <link rel="shortcut icon" href="./Images/bulldog.jpg">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
