--- a/Hobdy-part-one/index.html
+++ b/Hobdy-part-one/index.html
@@ -30,6 +30,7 @@
                 We will help you choose the best buddy that fits your family and home perfectly.
                 </h2>
                 <button class="button">Find out how</button>
+                <img src="./Images/bulldog.jpg" alt="bulldog">
             </div> 
         </div>
     </body>
