major overhaul on css and index page spacing needs correcting

--- a/Hobdy-part-one/index.html
+++ b/Hobdy-part-one/index.html
@@ -7,10 +7,9 @@
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
-</head>    
-    <body>
-        <div>
-            <header class="header">
+</head>
+    <body class="body">
+        <header class="header">
             Adopt <span class="emphasis">Me</span> 
                 <nav class="nav">
                     <ul id="ul">
@@ -22,16 +21,18 @@
                     </ul>
                 </nav>
             </header>
-            <div>   
+        <div id="parent">
                 <h1>
                 Do you think about <span class="emphasis">adopting</span> a friend?
                 </h1>
-                <h2>
+                <h2 class="child2">
                 We will help you choose the best buddy that fits your family and home perfectly.
                 </h2>
+                <h2>
                 <button class="button">Find out how</button>
-                <img src="./Images/bulldog.jpg" alt="bulldog">
-            </div> 
+                </h2>
+                <img src="./Images/bulldog.jpg" alt="bulldog" id="bulldog" height="500" width="300">
         </div>
+
     </body>
 </html>
