media changed to reflect above 768 pixels

--- a/Hobdy-part-one/index.html
+++ b/Hobdy-part-one/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
-    <body class="body">
-        <header class="header">
-            Adopt <span class="emphasis">Me</span> 
+    <body>
+        <header>
+            <div>
+                Adopt <span class="emphasis">Me</span> 
+            </div>
                 <nav class="nav">
-                    <ul id="ul">
+                    <ul>
                         <li><a href="">About Us</a></li>
                         <li><a href="">What We DO</a></li>
                         <li><a href="">Benefits</a></li>
@@ -31,7 +33,6 @@
                 <h2>
                 <button class="button">Find out how</button>
                 </h2>
-                <img src="./Images/bulldog.jpg" alt="bulldog" id="bulldog" height="500" width="300">
         </div>
 
     </body>
